fix: Sticky footer on smaller pages

--- a/_assets/css/_styles.scss
+++ b/_assets/css/_styles.scss
@@ -21,6 +21,7 @@ $env-develop-bg: $accent;
 html,
 body {
     min-height: 100%;
+    height: 100%;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -webkit-font-feature-settings: "liga","kern";
@@ -79,6 +80,7 @@ label {
     height: auto !important;
     height: 100%;
     margin: 0 auto -340px;
+    position: relative;
     overflow: hidden;
 }
 
@@ -95,6 +97,7 @@ label {
     bottom: 0;
     left: 0;
     right: 0;
+    position: relative;
 
     h1, h2, h3, h4, h5, h6 {
         color: #898c92;
